# OpenSource-Doc-Intelligence

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  container.py  evaluation_worker.py  main.py  worker.py
app/api/: __init__.py  dependencies.py  exception_handlers.py
app/core/: config.py  exceptions.py  logging.py  metrics.py  security.py  telemetry.py
app/db/: __init__.py  base.py  session.py
app/domain/: __init__.py  chat.py  chunks.py  citations.py  documents.py  evaluation.py  retrieval.py  usage.py
app/ingestion/: __init__.py  factory.py
app/providers/: __init__.py  azure_openai.py  base.py  factory.py  http_client.py  testing.py
app/repositories/: __init__.py  batching.py  chunk_repository.py  conversation_repository.py  document_repository.py  evaluation_repository.py  ingestion_job_repository.py  queue_gate.py  retrieval_repository.py  retrieval_run_repository.py  source_repository.py  usage_repository.py
app/retrieval/: __init__.py  filters.py  hybrid_fusion.py  keyword_retriever.py  query_preprocessor.py  reranker.py  vector_retriever.py
app/schemas/: chat.py  common.py  documents.py  evaluation.py  ingestion.py  usage.py
app/services/: __init__.py  answer_service.py  chat_service.py  citation_service.py  context_builder.py  evaluation_execution_service.py  evaluation_service.py  indexing_service.py  ingestion_queue_service.py  ingestion_service.py  llm_judges.py  no_answer_service.py  pricing_service.py  query_rewrite_service.py  retrieval_service.py  usage_service.py
config/: sources.yaml
docs/: architecture-decisions.md  evaluation-report-example.md  operations.md
evaluation/: __init__.py  adapters.py  calibration.py  dataset.py  dataset_builder.py  models.py  reporting.py  runner.py
evaluation/datasets/: kubernetes_eval.jsonl  kubernetes_source_catalog.jsonl
evaluation/judges/: __init__.py  llm.py
evaluation/metrics/: __init__.py  answer.py  answerability.py  citations.py  performance.py  retrieval.py  rewrite.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_link_evaluation_cases.py  0003_embedding_usage_volume.py
prompts/: answer.md  citation_check.md  eval_judge.md  no_answer.md  query_rewrite.md
scripts/: benchmark.py  build_eval_dataset.py  calibrate_no_answer.py  ingest_kubernetes.py  run_evaluation.py  seed_demo_data.py
tests/integration/: test_postgres_chat_e2e.py  test_postgres_evaluation_persistence.py  test_postgres_ingestion_e2e.py  test_postgres_queue_limits.py  test_postgres_retrieval.py
tests/unit/: test_answer_and_judges.py  test_azure_openai_providers.py  test_benchmark.py  test_chat_api.py  test_citation_service.py  test_config.py  test_health_api.py  (+43 more)
(+52 files in other folders)
